--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ button:hover {
     margin-top: 20px;
     display: none;
 }
+#surprise-message-1 {
+    font-size: 1.5rem;
+    color: #008080;
+    margin-top: 20px;
+    display: none;
+}
 
 .hidden {
     display: none;
