--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ button:hover {
     top: 0;
     width: 100%;
     height: 100%;
-    background: url('https://cdn.pixabay.com/photo/2014/12/21/23/56/balloons-576912_960_720.png') repeat;
+    background: url('https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&w=600') repeat;
     opacity: 0.1;
     z-index: -1;
 }
