--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     align-items: center;
     height: 100vh;
     overflow: hidden;
+  background: url('https://images.pexels.com/photos/949587/pexels-photo-949587.jpeg?auto=compress&cs=tinysrgb&w=600');
 }
 
 .container {
@@ -56,7 +57,6 @@ button:hover {
     top: 0;
     width: 100%;
     height: 100%;
-    background: url('https://images.pexels.com/photos/255379/pexels-photo-255379.jpeg?auto=compress&cs=tinysrgb&w=600') repeat;
     opacity: 0.1;
     z-index: -1;
 }
