--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
 
 .Message {
     font-size: 28px;
-    color: #ff4500;
+    color: #0ad881 ;
     margin: 20px 0;
 }
 
@@ -28,7 +28,7 @@ button {
     padding: 10px 20px;
     font-size: 1rem;
     border: none;
-    background-color: #ff4500;
+    background-color: #0ad881 ;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
