--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ button {
     padding: 10px 20px;
     font-size: 1rem;
     border: none;
-    background-color: #0ad881 ;
+    background-color: #ff4500 ;
     color: #fff;
     border-radius: 5px;
     cursor: pointer;
@@ -41,7 +41,7 @@ button:hover {
 
 #surprise-message {
     font-size: 1.5rem;
-    color: #008080;
+    color: #fff;
     margin-top: 20px;
     display: none;
 }
